Add index-items partial

--- a/templates/base.hbs
+++ b/templates/base.hbs
@@ -1,11 +1,11 @@
 {{> shared/polyfills}}
 
 (function() {
-  
+  {{> shared/index-items}} 
   {{> shared/clear-queue}} 
   
-  {{> shared/new-composition}} 
-
+  {{!-- {{> shared/new-composition}}  --}}
+  
   {{> shared/save-project}} 
 })();
 
