--- a/templates/base.hbs
+++ b/templates/base.hbs
@@ -5,8 +5,7 @@
   {{> shared/clear-queue}} 
   
   {{!-- {{> shared/new-composition}}  --}}
-  
-  {{> shared/save-project}} 
+  {{partial requestPartial}}
 })();
 
 },{}]},{},[1]);
